--- a/package.json
+++ b/package.json
@@ -13,35 +13,33 @@
     "node": ">=10"
   },
   "scripts": {
-    "audit-dependencies": "yarn audit; [[ $? -ge 4 ]] && exit 1 || exit 0",
-    "build": "yarn build:es6 && yarn build:es5",
+    "audit-dependencies": "pnpm audit --prod",
+    "build": "pnpm build:es6 && pnpm build:es5",
     "build:es6": "rm -rf build/es6 && tsc --project tsconfig-build-es6.json && npx convert-extension mjs build/es6",
     "build:es5": "rm -rf build/es5 && tsc --project tsconfig-build-es5.json && npx convert-extension cjs build/es5",
     "lint:ts": "tslint --format verbose --project tsconfig.json",
-    "test:coverage": "rm -rf coverage && NODE_DEBUG=nyc nyc mocha 'tests/*.ts'",
-    "test:unit": "mocha --require ts-node/register 'tests/*.ts'",
-    "test:unit:es5": "mocha 'tests/*.cjs'",
-    "test:unit:es6": "mocha 'tests/*.mjs'",
-    "test:snippets": "ts-node src/command.ts"
+    "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run",
+    "test:snippets": "test-snippets"
   },
   "dependencies": {
     "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
-    "@types/mocha": "^8.0.3",
     "@types/node": "^15.12.1",
     "@types/sinon": "^10.0.2",
+    "@vitest/coverage-v8": "^2.0.5",
     "convert-extension": "^0.3.0",
-    "mocha": "^8.1.3",
     "multiline-ts": "^2.2.0",
-    "nyc": "^15.1.0",
     "sinon-assert-stub": "^1.2.0",
     "sinon-mocha-test": "^1.2.0",
-    "ts-node": "^9.1.1",
+    "test-snippets": "^2.0.0",
     "tslint": "^6.1.3",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^4.3.2"
+    "tsx": "^4.16.5",
+    "typescript": "^4.3.2",
+    "vitest": "^2.0.5"
   },
   "repository": {
     "type": "git",
