--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "pnpm build:es6 && pnpm build:es5",
     "build:es6": "rm -rf build/es6 && tsc --project tsconfig-build-es6.json && npx convert-extension mjs build/es6",
     "build:es5": "rm -rf build/es5 && tsc --project tsconfig-build-es5.json && npx convert-extension cjs build/es5",
-    "lint:ts": "tslint --format verbose --project tsconfig.json",
+    "lint:ts": "eslint .",
     "test:coverage": "vitest run --coverage",
     "test:unit": "vitest run",
     "test:snippets": "test-snippets"
@@ -26,17 +26,20 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.1",
     "@types/sinon": "^10.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "^2.0.5",
     "convert-extension": "^0.3.0",
+    "eslint": "^9.8.0",
     "multiline-ts": "^2.2.0",
     "sinon-assert-stub": "^1.2.0",
     "sinon-mocha-test": "^1.2.0",
     "test-snippets": "^2.0.0",
-    "tslint": "^6.1.3",
-    "tslint-eslint-rules": "^5.4.0",
     "tsx": "^4.16.5",
     "typescript": "^4.3.2",
     "vitest": "^2.0.5"
