Replace build system with tsup

--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "Yason is a lightweight data-interchange format. Designed to be easy for humans and machines to write and understand.",
   "author": "Peter West",
   "license": "MIT",
-  "main": "./build/wrapper.js",
+  "type": "module",
+  "main": "./build/code/index.js",
   "exports": {
-    "import": "./build/es6/index.mjs",
-    "require": "./build/wrapper.js"
+    "import": "./build/code/index.js",
+    "require": "./build/wrapper.cjs"
   },
   "engines": {
     "node": ">=10"
   },
   "scripts": {
     "audit-dependencies": "pnpm audit --prod",
-    "build": "pnpm build:es6 && pnpm build:es5",
-    "build:es6": "rm -rf build/es6 && tsc --project tsconfig-build-es6.json && npx convert-extension mjs build/es6",
-    "build:es5": "rm -rf build/es5 && tsc --project tsconfig-build-es5.json && npx convert-extension cjs build/es5",
+    "build": "rm -rf build/code && tsup src/index.ts --format cjs,esm --dts --out-dir build/code",
     "lint:ts": "eslint .",
     "test:coverage": "vitest run --coverage",
     "test:unit": "vitest run",
@@ -34,12 +33,12 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "^2.0.5",
-    "convert-extension": "^0.3.0",
     "eslint": "^9.8.0",
     "multiline-ts": "^2.2.0",
     "sinon-assert-stub": "^1.2.0",
     "sinon-mocha-test": "^1.2.0",
     "test-snippets": "^2.0.0",
+    "tsup": "^8.2.3",
     "tsx": "^4.16.5",
     "typescript": "^4.3.2",
     "vitest": "^2.0.5"
