--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "lib": ["es2018"],
+    "target": "es2022",
+    "lib": ["es2022"],
     "declaration": true,
     "sourceMap": true,
-    "module": "commonjs",
+    "module": "es2022",
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -17,7 +17,6 @@
     "esModuleInterop": true
   },
   "include": [
-    "src/**/*.ts",
-    "tests/**/*.ts"
+    "**/*.ts"
   ]
 }
