--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "require": "./build/wrapper.cjs"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=18.18.0"
   },
   "scripts": {
     "build": "rm -rf build/code && tsup src/index.ts --format cjs,esm --dts --out-dir build/code",
-    "lint:ts": "eslint .",
+    "lint:ts": "eslint",
     "lint:dependencies": "depcheck",
     "lint:unlinted": "unlinted",
     "test:coverage": "vitest run --coverage",
