--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,75 +4,71 @@ orbs:
   coveralls: coveralls/coveralls@1.0.6
 
 references:
-  yarn-cache-key-latest: &yarn-cache-key-latest
-    v1-dependency-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}-latest
-  yarn-cache-key: &yarn-cache-key
-    v1-dependency-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-  yarn-backup-cache-key: &yarn-backup-cache-key
-    v1-dependency-yarn-{{ .Branch }}-
-  yarn-backup-cache-key-no-branch: &yarn-backup-cache-key-no-branch
-    v1-dependency-yarn-
-  node-10: &node-10
-    circleci/node:10.19.0
-  node-12: &node-12
-    circleci/node:12.18.0
-  node-14: &node-14
-    circleci/node:14.4.0
-  node-10-latest: &node-10-latest
-    circleci/node:10
-  node-12-latest: &node-12-latest
-    circleci/node:12
-  node-14-latest: &node-14-latest
-    circleci/node:14
+  pnpm-cache-key-updated: &pnpm-cache-key-updated
+    v1-dependency-pnpm-{{ .Branch }}-{{ checksum "pnpm-lock.yaml" }}-updated
+  pnpm-cache-key: &pnpm-cache-key
+    v1-dependency-pnpm-{{ .Branch }}-{{ checksum "pnpm-lock.yaml" }}
+  pnpm-backup-cache-key: &pnpm-backup-cache-key
+    v1-dependency-pnpm-{{ .Branch }}-
+  pnpm-backup-cache-key-no-branch: &pnpm-backup-cache-key-no-branch
+    v1-dependency-pnpm-
+
+  node-old: &node-old
+    cimg/node:18.20.4
+  node-mid: &node-mid
+    cimg/node:20.15.1
+  node-new: &node-new
+    cimg/node:22.4.1
 
 commands:
   install-dependencies:
     steps:
       - run:
-          name: Yarn version
-          command: yarn --version
+          name: PNPM version
+          command: pnpm --version
       - restore_cache:
+          name: Restore pnpm cache
           keys:
-            - *yarn-cache-key
-            - *yarn-backup-cache-key
-            - *yarn-backup-cache-key-no-branch
+            - *pnpm-cache-key
+            - *pnpm-backup-cache-key
+            - *pnpm-backup-cache-key-no-branch
       - run:
           name: Install dependencies
-          command: yarn install --frozen-lockfile
+          command: pnpm install
       - save_cache:
-          name: Save yarn package cache
-          key: *yarn-cache-key
+          name: Save pnpm cache
+          key: *pnpm-cache-key
           paths:
-            - ~/.cache/yarn
+            - node_modules
 
-  install-dependencies-latest:
+  install-dependencies-updated:
     steps:
       - run:
-          name: Yarn version
-          command: yarn --version
+          name: PNPM version
+          command: pnpm --version
       - restore_cache:
           keys:
-            - *yarn-cache-key-latest
-            - *yarn-cache-key
-            - *yarn-backup-cache-key
-            - *yarn-backup-cache-key-no-branch
+            - *pnpm-cache-key-updated
+            - *pnpm-cache-key
+            - *pnpm-backup-cache-key
+            - *pnpm-backup-cache-key-no-branch
       - run:
           name: Upgrade dependencies lockfile and install
-          command: yarn upgrade
+          command: pnpm update
       - run:
           name: Output dependencies diff
           command: git --no-pager diff
       - save_cache:
-          name: Save yarn package cache
-          key: *yarn-cache-key-latest
+          name: Save pnpm cache
+          key: *pnpm-cache-key-updated
           paths:
-            - ~/.cache/yarn
+            - node_modules
 
   checks:
     steps:
       - run:
           name: Lint Typescript code
-          command: yarn lint:ts
+          command: pnpm lint:ts
       - run:
           name: Check for missing or unusued dependencies
           command: pnpm lint:dependencies
@@ -87,126 +83,113 @@ commands:
     steps:
       - run:
           name: Build project
-          command: yarn build
+          command: pnpm build
 
   tests:
     steps:
       - run:
+          name: Test documentation snippets
+          command: pnpm test:snippets
+      - run:
           name: TS Unit tests
-          command: yarn test:coverage
+          command: pnpm test:coverage
       - store_artifacts:
           path: coverage
       - store_test_results:
           path: ~/test-results/
 
-  tests-es5:
-    steps:
-      - run:
-          name: ES5 Unit tests
-          command: yarn test:unit:es5
-
-  tests-es6:
-    steps:
-      - run:
-          name: ES6 Unit tests
-          command: yarn test:unit:es6
-
 jobs:
   checks:
     docker:
-      - image: *node-14
+      - image: *node-new
     steps:
       - checkout
       - install-dependencies
       - checks
 
-  test-node-10:
+  test-node-old:
     docker:
-      - image: *node-10
+      - image: *node-old
     steps:
       - checkout
       - install-dependencies
       - build
       - tests
-      - tests-es5
 
-  test-node-12:
+  test-node-mid:
     docker:
-      - image: *node-12
+      - image: *node-mid
     steps:
       - checkout
       - install-dependencies
       - build
       - tests
-      - tests-es5
-      - tests-es6
 
-  test-node-14:
+  test-node-new:
     docker:
-      - image: *node-14
+      - image: *node-new
     steps:
       - checkout
       - install-dependencies
       - build
       - tests
-      - tests-es5
-      - tests-es6
       - coveralls/upload
 
-  checks-latest:
+  checks-updated:
     docker:
-      - image: *node-14
+      - image: *node-new
     steps:
       - checkout
-      - install-dependencies-latest
+      - install-dependencies-updated
       - checks
 
-  test-node-10-latest:
+  test-node-old-updated:
     docker:
-      - image: *node-10-latest
+      - image: *node-old
     steps:
       - checkout
-      - install-dependencies-latest
+      - install-dependencies-updated
       - build
       - tests
-      - tests-es5
 
-  test-node-12-latest:
+  test-node-mid-updated:
     docker:
-      - image: *node-12-latest
+      - image: *node-mid
     steps:
       - checkout
-      - install-dependencies-latest
+      - install-dependencies-updated
       - build
       - tests
-      - tests-es5
 
-  test-node-14-latest:
+  test-node-new-updated:
     docker:
-      - image: *node-14-latest
+      - image: *node-new
     steps:
       - checkout
-      - install-dependencies-latest
+      - install-dependencies-updated
       - build
       - tests
-      - tests-es5
-      - tests-es6
 
 workflows:
   version: 2
   test:
     jobs:
       - checks
-      - test-node-10
-      - test-node-12
-      - test-node-14
+      - test-node-old
+      - test-node-mid
+      - test-node-new
+      - checks-updated
+      - test-node-old-updated
+      - test-node-mid-updated
+      - test-node-new-updated
 
   weekly:
     jobs:
-      - checks-latest
-      - test-node-10-latest
-      - test-node-12-latest
-      - test-node-14-latest
+      - checks
+      - checks-updated
+      - test-node-old-updated
+      - test-node-mid-updated
+      - test-node-new-updated
     triggers:
       - schedule:
           # Midnight on Sunday
