--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.0.2",
     "@types/sinon": "^17.0.3",
